--- a/package.json
+++ b/package.json
@@ -1,41 +1,8 @@
 {
-  "name": "mysite",
-  "private": true,
-  "version": "0.0.1",
-  "type": "module",
-  "scripts": {
-    "build": "vite build",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "dev": "vite dev",
-    "lint": "eslint .",
-    "prepare": "svelte-kit sync || echo ''",
-    "preview": "vite preview"
+  "dependencies": {
+    "sst": "3.17.12"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.5",
-    "@eslint/js": "^9.18.0",
-    "@sveltejs/adapter-auto": "^6.0.0",
-    "@sveltejs/kit": "^2.16.0",
-    "@sveltejs/vite-plugin-svelte": "^5.0.0",
-    "@tailwindcss/forms": "^0.5.9",
-    "@tailwindcss/typography": "^0.5.15",
-    "@tailwindcss/vite": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.33.0",
-    "@typescript-eslint/parser": "^8.33.0",
-    "eslint": "^9.18.0",
-    "eslint-plugin-svelte": "^3.9.0",
-    "globals": "^16.0.0",
-    "svelte": "^5.0.0",
-    "svelte-check": "^4.0.0",
-    "svelte-eslint-parser": "^1.2.0",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5.0.0",
-    "typescript-eslint": "^8.20.0",
-    "vite": "^6.2.6"
-  },
-  "dependencies": {
-    "sst": "3.17.0",
-    "svelte-kit-sst": "2.43.5"
+    "@types/aws-lambda": "8.10.152"
   }
 }
