--- a/web/.svelte-kit/output/client/.vite/manifest.json
+++ b/web/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.D1anF_NT.js",
+    "file": "_app/immutable/entry/app.7gfmI0RV.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -33,7 +33,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.BaetlloE.js",
+    "file": "_app/immutable/nodes/1.DTXL6FHL.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -42,7 +42,7 @@
       "_CWj6FrbW.js",
       "_0Eq5cj4i.js",
       "_XJ6c69y-.js",
-      "_2YSwHIc2.js"
+      "_C4ZJkBFU.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -66,8 +66,8 @@
       "_XJ6c69y-.js"
     ]
   },
-  "_2YSwHIc2.js": {
-    "file": "_app/immutable/chunks/2YSwHIc2.js",
+  "_C4ZJkBFU.js": {
+    "file": "_app/immutable/chunks/C4ZJkBFU.js",
     "name": "entry",
     "imports": [
       "_XJ6c69y-.js"
@@ -96,12 +96,12 @@
     "name": "index-client"
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.C_dj9OMM.js",
+    "file": "_app/immutable/entry/start.C29Zm4P1.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_2YSwHIc2.js"
+      "_C4ZJkBFU.js"
     ]
   }
 }
