--- a/web/.svelte-kit/output/client/.vite/manifest.json
+++ b/web/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.7gfmI0RV.js",
+    "file": "_app/immutable/entry/app.B76WTPbC.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -16,7 +16,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.hn069lLi.js",
+    "file": "_app/immutable/nodes/0.CjhN8oiu.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
@@ -29,11 +29,11 @@
       "_CunPdMX0.js"
     ],
     "css": [
-      "_app/immutable/assets/0.BRrSN7pZ.css"
+      "_app/immutable/assets/0.BZ9iIO-w.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.DTXL6FHL.js",
+    "file": "_app/immutable/nodes/1.C4_xadxJ.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -42,11 +42,11 @@
       "_CWj6FrbW.js",
       "_0Eq5cj4i.js",
       "_XJ6c69y-.js",
-      "_C4ZJkBFU.js"
+      "_ofAMWHXb.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.CMds_jqL.js",
+    "file": "_app/immutable/nodes/2.jt19citn.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
@@ -62,13 +62,6 @@
   "_0Eq5cj4i.js": {
     "file": "_app/immutable/chunks/0Eq5cj4i.js",
     "name": "legacy",
-    "imports": [
-      "_XJ6c69y-.js"
-    ]
-  },
-  "_C4ZJkBFU.js": {
-    "file": "_app/immutable/chunks/C4ZJkBFU.js",
-    "name": "entry",
     "imports": [
       "_XJ6c69y-.js"
     ]
@@ -95,13 +88,20 @@
     "file": "_app/immutable/chunks/XJ6c69y-.js",
     "name": "index-client"
   },
+  "_ofAMWHXb.js": {
+    "file": "_app/immutable/chunks/ofAMWHXb.js",
+    "name": "entry",
+    "imports": [
+      "_XJ6c69y-.js"
+    ]
+  },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.C29Zm4P1.js",
+    "file": "_app/immutable/entry/start.UBlsn_W6.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_C4ZJkBFU.js"
+      "_ofAMWHXb.js"
     ]
   }
 }
