--- a/web/.svelte-kit/output/server/.vite/manifest.json
+++ b/web/.svelte-kit/output/server/.vite/manifest.json
@@ -102,7 +102,7 @@
       "_index.js"
     ],
     "css": [
-      "_app/immutable/assets/_layout.BRrSN7pZ.css"
+      "_app/immutable/assets/_layout.BZ9iIO-w.css"
     ]
   },
   "src/routes/+page.svelte": {
