--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
+  "name": "mysite",
+  "type": "module",
   "dependencies": {
     "sst": "3.17.12"
   },
   "devDependencies": {
-    "@types/aws-lambda": "8.10.152"
-  }
+    "@eslint/js": "^9.34.0",
+    "@types/aws-lambda": "8.10.152",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^9.34.0",
+    "eslint-plugin-svelte": "^2.35.0",
+    "globals": "^14.0.0",
+    "svelte": "^4.0.0",
+    "svelte-eslint-parser": "^0.33.0",
+    "typescript": "^5.9.2"
+  },
+  "workspaces": [
+    "web",
+    "shared-types",
+    "server"
+  ]
 }
