--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,24 @@
-{}
+{
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "allowJs": true,
+    "declaration": true,
+    "baseUrl": ".",
+    "paths": {
+      "@shared-types/*": ["./shared-types/src/*"]
+    },
+    "noEmit": true
+  },
+  "files": [],
+  "references": [
+    { "path": "./shared-types" }
+  ],
+  "exclude": ["node_modules", "dist", "build", ".svelte-kit"]
+}
