--- a/web/package.json
+++ b/web/package.json
@@ -21,15 +21,16 @@
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.7.0",
-		"eslint-plugin-svelte": "^2.36.0",
+		"eslint-plugin-svelte": "^3.12.1",
 		"globals": "^15.0.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-tailwindcss": "^0.6.9",
-		"svelte": "^5.0.0",
+		"svelte": "^5.38.6",
 		"svelte-check": "^4.0.0",
+		"svelte-eslint-parser": "^1.3.1",
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.0.0",
+		"typescript-eslint": "^8.42.0",
 		"vite": "^5.4.11",
 		"vitest": "^2.0.4"
 	},
