--- a/shared-types/tsconfig.json
+++ b/shared-types/tsconfig.json
@@ -4,7 +4,9 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "noEmit": false,
-    "composite": true
+    "composite": true,
+    "skipLibCheck": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
