--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.3",
+		"@openauthjs/openauth": "^0.4.3",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.0.0",
@@ -38,6 +39,7 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"svelte-hero-icons": "^5.2.0"
+		"svelte-hero-icons": "^5.2.0",
+		"valibot": "^1.1.0"
 	}
 }
