--- a/server/functions/tsconfig.json
+++ b/server/functions/tsconfig.json
@@ -9,6 +9,7 @@
     "resolveJsonModule": true,
     "declaration": true,
     "composite": true,
+    "noEmit": true,
     "paths": {
       "@shared-types/*": ["../../shared-types/src/*"]
     }
