--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,16 +35,10 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ github.ref_name == 'main' && 'af-south-1' }}
+          aws-region: af-south-1
       
       - name: Deploy to environment
-        run: |
-          if [ "${{ github.ref_name }}" = "main" ]; then
-            yarn sst deploy --stage=live
-          else
-            echo "No deployment configured for branch ${{ github.ref }}"
-            exit 1
-          fi
+        run: yarn sst deploy --stage=live
 
 
 
