--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
           yarn --version
       
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --immutable
       
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
