--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@types/add": "^2",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.7.0",
 		"eslint-plugin-svelte": "^3.12.1",
@@ -39,8 +40,13 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
+		"add": "^2.0.6",
+		"arctic": "^2.2.0",
+		"hono": "^4.11.3",
 		"marked": "^16.4.0",
+		"postcss": "^8.5.6",
 		"svelte-hero-icons": "^5.2.0",
-		"valibot": "^1.1.0"
+		"valibot": "^1.1.0",
+		"yarn": "^1.22.22"
 	}
 }
