--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
         
       
       - name: Install dependencies
-        run: yarn install --immutable
+        run: yarn install
       
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
