--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mysite",
   "type": "module",
   "dependencies": {
-    "sst": "3.17.12"
+    "sst": "^3.17.25"
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
